angular prod build verified