@@ -1,6 +1,10 @@
 package com.task.clockwrk.clockWork.security;
 
-import lombok.RequiredArgsConstructor;
+import java.util.Arrays;
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -12,24 +16,37 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.List;
+
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
+@Slf4j
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final UserDetailsService userDetailsService;
-    private final CustomOAuth2UserService customOAuth2UserService;
-    private final OAuth2LoginSuccessHandler oauth2LoginSuccessHandler;
+    private final PasswordEncoder passwordEncoder;
+
+    @Autowired(required = false)
+    private CustomOAuth2UserService customOAuth2UserService;
+
+    @Autowired(required = false)
+    private OAuth2LoginSuccessHandler oauth2LoginSuccessHandler;
+
+    @Value("${app.frontend.url}")
+    private String frontendUrl;
+
+    @Value("${spring.security.oauth2.client.registration.google.client-id:}")
+    private String googleClientId;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -37,64 +54,94 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**", "/oauth2/**", "/login/oauth2/**").permitAll()
+                        .requestMatchers(
+                                "/api/auth/**", 
+                                "/oauth2/**", 
+                                "/login/oauth2/**",
+                                "/api/health",
+                                "/actuator/health"
+                        ).permitAll()
                         .requestMatchers("/uploads/**").permitAll()
                         .anyRequest().authenticated()
-                )
-                .oauth2Login(oauth2 -> oauth2
-                        .userInfoEndpoint(userInfo -> userInfo
-                                .userService(customOAuth2UserService)
-                        )
-                        .successHandler(oauth2LoginSuccessHandler)
                 )
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider())
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
+        // Only configure OAuth2 if credentials are provided
+        if (isOAuth2Configured()) {
+            log.info("OAuth2 login enabled");
+            http.oauth2Login(oauth2 -> oauth2
+                    .userInfoEndpoint(userInfo -> userInfo
+                            .userService(customOAuth2UserService)
+                    )
+                    .successHandler(oauth2LoginSuccessHandler)
+            );
+        } else {
+            log.info("OAuth2 login disabled - no credentials configured");
+        }
+
+        log.info("Security configuration initialized - Frontend URL: {}", frontendUrl);
         return http.build();
     }
-    
-    @jakarta.annotation.PostConstruct
-    public void init() {
-        System.out.println("========================================");
-        System.out.println("SecurityConfig initialized!");
-        System.out.println("CustomOAuth2UserService: " + customOAuth2UserService);
-        System.out.println("OAuth2LoginSuccessHandler: " + oauth2LoginSuccessHandler);
-        System.out.println("========================================");
-    }
 
-    @org.springframework.beans.factory.annotation.Value("${app.frontend.url}")
-    private String frontendUrl;
+    private boolean isOAuth2Configured() {
+        return googleClientId != null && !googleClientId.isBlank() 
+                && customOAuth2UserService != null 
+                && oauth2LoginSuccessHandler != null;
+    }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Allow both localhost and production frontend URL
-        configuration.setAllowedOrigins(List.of("http://localhost:4200", frontendUrl));
+        
+        // Parse frontend URL and add both localhost and production
+        List<String> allowedOrigins = Arrays.asList(
+                "http://localhost:4200",
+                "https://localhost:4200",
+                frontendUrl
+        );
+        
+        // If frontend URL uses HTTP, also allow HTTPS version
+        if (frontendUrl.startsWith("http://")) {
+            allowedOrigins = Arrays.asList(
+                    "http://localhost:4200",
+                    "https://localhost:4200",
+                    frontendUrl,
+                    frontendUrl.replace("http://", "https://")
+            );
+        }
+        
+        configuration.setAllowedOrigins(allowedOrigins);
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setAllowedHeaders(List.of(
+                "Authorization", 
+                "Content-Type", 
+                "X-Requested-With",
+                "Accept",
+                "Origin"
+        ));
+        configuration.setExposedHeaders(List.of(
+                "X-Token-Expired",
+                "Content-Disposition"
+        ));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-
-
     @Bean
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
+        authProvider.setPasswordEncoder(passwordEncoder);
         return authProvider;
     }
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
-    }
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
     }
 }
